@@ -3,6 +3,10 @@
   Preview function for Converting BC Apps to Runtime Packages
  .Description
   Preview function for Converting BC Apps to Runtime Packages
+ .Parameter showMyCode
+  Include this switch if you want to include the app's source code in the runtime package.
+ .Parameter includeSourceInPackageFile
+  Include this switch if you want to include source code in the runtime package.
  .Parameter skipFailingApps
   If set, a failing app (compiler error or anything else) does not stop the whole process but continues with the next app.
  .Parameter afterEachRuntimeCreation
@@ -27,6 +31,8 @@ function Convert-BcAppsToRuntimePackages {
         $apps,
         [Parameter(Mandatory=$false)]
         $destinationFolder = "",
+        [switch] $includeSourceInPackageFile,
+        [switch] $showMyCode,
         [switch] $skipVerification,
         [switch] $skipFailingApps,
         [scriptblock] $afterEachRuntimeCreation = {}
@@ -99,42 +105,55 @@ try {
         }
     
         $apps | ForEach-Object {
-            $appFile = $_;
+            $appFile = $_
 
             try {
-                $afterEachRuntimeCreationParameters = @{ 'appFile' = $appFile; };
+                $afterEachRuntimeCreationParameters = @{ 'appFile' = $appFile }
 
-                $runtimeFileName = Invoke-ScriptInBcContainer -containerName $containerName -scriptblock { Param($appFile, $destinationFolder, $bcVersion, $skipVerification)
-                    Write-Host "Publishing $([System.IO.Path]::GetFileName($appFile))";
+                $runtimeFileName = Invoke-ScriptInBcContainer -containerName $containerName -scriptblock { Param($appFile, $destinationFolder, $bcVersion, $skipVerification, $showMyCode, $includeSourceInPackageFile)
+                    Write-Host "Publishing $([System.IO.Path]::GetFileName($appFile))"
 
-                    Publish-NavApp -ServerInstance $serverInstance -path $appFile -skipVerification:$skipVerification -packageType Extension;
-                    $navAppInfo = Get-NAVAppInfo -Path $appFile;
-                    $appPublisher = $navAppInfo.Publisher;
-                    $appName = $navAppInfo.Name;
-                    $appVersion = $navAppInfo.Version;
-                    $appFileName = "$($appPublisher)_$($appName)_$($appVersion).runtime-$($bcVersion).app".Split([System.IO.Path]::GetInvalidFileNameChars()) -join '';
-                    Write-Host "Creating Runtime Package $([System.IO.Path]::GetFileName($appFileName))";
-                    Get-NavAppRuntimePackage -ServerInstance $serverInstance -appName $appName -appPublisher $appPublisher -appVersion $appVersion -Path (Join-Path $destinationFolder $appFileName);
+                    Publish-NavApp -ServerInstance $serverInstance -path $appFile -skipVerification:$skipVerification -packageType Extension
+                    $navAppInfo = Get-NAVAppInfo -Path $appFile
 
-                    return $appFileName;
-                } -argumentList (Get-BcContainerPath -containerName $containerName -path $appFile), (Get-BcContainerPath -containerName $containerName -path $destinationFolder), $bcVersion, $skipVerification;
+                    $appPublisher = $navAppInfo.Publisher
+                    $appName = $navAppInfo.Name
+                    $appVersion = $navAppInfo.Version
+                    $appFileName = "$($appPublisher)_$($appName)_$($appVersion).runtime-$($bcVersion).app".Split([System.IO.Path]::GetInvalidFileNameChars()) -join ''
+                    $params = @{
+                        "ServerInstance" = $serverInstance
+                        "appName" = $appName
+                        "appPublisher" = $appPublisher
+                        "appVersion" = $appVersion
+                        "path" = (Join-Path $destinationFolder $appFileName)
+                    }
+                    if ($showMyCode) {
+                        $params += @{ "showMyCode" = $true }
+                    }
+                    if ($includeSourceInPackageFile) {
+                        $params += @{ "includeSourceInPackageFile" = $true }
+                    }
+                    Write-Host "Creating Runtime Package $([System.IO.Path]::GetFileName($appFileName))"
+                    Get-NavAppRuntimePackage @params
 
-                $afterEachRuntimeCreationParameters += @{ 'runtimeFile' = (Join-Path -Path $destinationFolder -ChildPath $runtimeFileName); };
+                    return $appFileName
+                } -argumentList (Get-BcContainerPath -containerName $containerName -path $appFile), (Get-BcContainerPath -containerName $containerName -path $destinationFolder), $bcVersion, $skipVerification, $showMyCode, $includeSourceInPackageFile
+
+                $afterEachRuntimeCreationParameters += @{ 'runtimeFile' = (Join-Path -Path $destinationFolder -ChildPath $runtimeFileName) }
             }
             catch {
-                if (!$skipFailingApps.IsPresent)
-                {
-                    throw;
+                if (!$skipFailingApps.IsPresent) {
+                    throw
                 }
 
-                Write-Warning -Message "Failed creating Runtime Package for $($appFile).";
-                $afterEachRuntimeCreationParameters += @{ 'runtimeFile' = $null; };
+                Write-Warning -Message "Failed creating Runtime Package for $($appFile)."
+                $afterEachRuntimeCreationParameters += @{ 'runtimeFile' = $null }
             }
 
-            $afterEachRuntimeCreation.Invoke($afterEachRuntimeCreationParameters);
+            $afterEachRuntimeCreation.Invoke($afterEachRuntimeCreationParameters)
         }
     
-        $destinationFolder;
+        $destinationFolder
     }
     finally {
         Remove-BcContainer -containerName $containerName
